--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,24 @@
       color: var(--roxo);
       margin-bottom: 2rem;
     }
+    .video-container {
+  position: relative;
+  padding-bottom: 56.25%; /* Proporção 16:9 */
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+  margin: 2rem auto;
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 12px;
+  border: 3px solid var(--dourado);
+}
 
     /* Estilo solto para os testemunhos */
     .testemunhos {
@@ -109,4 +127,5 @@
         gap: 3rem;
       }
     }
+
   
